# wta

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  config.py  config_de.py  config_gr.py  paths.py  pyproject.toml  requirements.txt  settings.py  tox.ini
.github/workflows/: check.yaml
data/THEcorpus/: README.txt
data/THEcorpus/de/: A1_2022RI1_il_2.idfx  A1_2022RI2_il_1.idfx  A1_2023RI3_il_1.idfx  A1_2023RI4_il_1.idfx  A1_2023RI5_il_3.idfx  A1_2023RI6_il_1.idfx  A1_2023RI7_il_1.idfx  A2_2022RI1_il_1.idfx  A2_2022RI2_il_1.idfx  A2_2023RI3_il_2.idfx  A2_2023RI4_il_1.idfx  A2_2023RI5_il_2.idfx  A2_2023RI6_il_3.idfx  A2_2023RI7_il_1.idfx
data/THEcorpus/de/txt/: A1_2022RI1_ft_2.txt  A1_2022RI2_ft_1.txt  A1_2023RI3_ft_1.txt  A1_2023RI4_ft_1.txt  A1_2023RI5_ft_3.txt  A1_2023RI6_ft_1.txt  A1_2023RI7_ft_1.txt  A2_2022RI1_ft_1.txt  A2_2022RI2_ft_1.txt  A2_2023RI3_ft_2.txt  A2_2023RI4_ft_1.txt  A2_2023RI5_ft_2.txt  A2_2023RI6_ft_3.txt  A2_2023RI7_ft_1.txt
data/supeval_corpus/: README.txt
data/supeval_corpus/de/automatic_annotation/sentence_histories/: 2022RI1_senhis.csv
data/supeval_corpus/de/automatic_annotation/sentence_operations/: 2022RI1_il_2_sentence_transformation_history.csv
data/supeval_corpus/de/automatic_annotation/sentencehood/: 2022RI1-4_sentencehood.csv
data/supeval_corpus/de/automatic_annotation/text_transformations/: 2022RI1_il_2_text_transformation_history.csv
data/video_corpus/: README.txt
data/video_corpus/de/: A_il_1.idfx  J_il_1.idfx  K_il_1.idfx  M_il_1.idfx  R_il_1.idfx
data/video_corpus/de/txt/: A_ft_1.txt  J_ft_1.txt  K_ft_1.txt  M_ft_1.txt  N_ft_1.txt  R_ft_1.txt
example_data/initial_data/: Cerstin_Mahlow_ft_1.txt  Cerstin_Mahlow_il_1.idfx  Don_ft_1.txt  Don_il_1.idfx  Julia_Krasselt_ft_1.txt  Ulas_ft_1.txt  Ulas_il_1.idfx
example_data/sentence_editing/: Ulas_ft_4.txt  Ulas_ft_5.txt  Ulas_ft_6.txt  Ulas_ft_7.txt  Ulas_il_4.idfx  Ulas_il_5.idfx  Ulas_il_6.idfx  Ulas_il_7.idfx  ulas_ft_1.txt  ulas_ft_2.txt  ulas_ft_3.txt  ulas_il_1.idfx  ulas_il_2.idfx  ulas_il_3.idfx
example_data/video/: Andy_Hediger_il_1.idfx  C_ft_1.txt  C_il_1.idfx  Cerstin_Mahlow_il_1.idfx  Diewald_Nils_il_1.idfx  Julia_Krasselt_il_1.idfx  Michael_Piotrowski_il_1.idfx  N_il_1.idfx  Philipp_Dreesen_ft_1.txt  Philipp_Dreesen_il_1.idfx  Ruth_Mell_ft_1.txt  Ruth_Mell_il_1.idfx  klaus_rothenhaeusler_il_1.idfx
stubs/diaparser/: parsers.pyi
stubs/diaparser/utils/: __init__.pyi  transform.pyi
stubs/language_tool_python/: __init__.pyi
stubs/matplotlib/: __init__.pyi  artist.pyi  axes.pyi  container.pyi  figure.pyi  patches.pyi  pyplot.pyi  text.pyi
stubs/nltk/: __init__.pyi  data.pyi
stubs/nltk/tokenize/: api.pyi
stubs/supar/: __init__.pyi  utils.pyi
wta/: __main__.py  config_data.py  console_output.py  export.py  idfx_parser.py  models.py  relevance_evaluator.py  sentence.py  sentence_classifier.py  sentence_history.py  sentence_parser.py  sentence_tokenizer.py  settings.py  statistics.py  stats_generator.py  storage.py  tpsf.py  transformation_classifier.py  transforming_sequence.py  visualisation.py
wta/language_models/: spacy.py
wta/output_handler/: console.py  names.py  output_factory.py  statistics_factory.py
wta/output_handler/plots/: base.py  colors.py  senhis_plot.py  sentransformations_plot.py  sentranshis_plot.py  stats_plot.py  texthis_plot.py  texttransformations_plot.py  transhis_plot.py
wta/output_handler/statistics/: statistics_factory.py
wta/output_handler/storage/: base.py  csv.py  json.py  output_factory.py  svg.py  txt.py
wta/pipeline/: names.py  regular_expressions.py  regularexpressions.py  relevance_evaluator.py
wta/pipeline/BL2TL_projection/: bl2tl_projector.py  bscope_classifier.py  burst.py  burst_factory.py
wta/pipeline/SL2TL_projection/: scope_classifier.py  segment.py  sl2tl_projector.py  textunit.py  textunit_factory.py  tssegmenter.py
wta/pipeline/TL2SL_projection/: operation_classifier.py
wta/pipeline/burst_layer/: burst_history.py  bursthis_generator.py  pcm_factory.py
wta/pipeline/evaluation/: texthis_correctness.py
wta/pipeline/preprocessing/: action.py  action_factory.py  event_factory.py
wta/pipeline/preprocessing/events/: base.py  insert.py  keyboard.py  replacement.py
wta/pipeline/sentence_histories/: sentence.py  sentence_classifier.py  sentence_factory.py  sentence_history.py  sentencehood_evaluator.py  text_unit.py  text_unit_factory.py
wta/pipeline/sentence_layer/sentence_histories/: senhis_generator.py  sentence_history.py  sentence_transformation.py  sentence_transformation_classifier.py  sentence_transformation_history.py  sentencehood_evaluator.py  spsf.py
wta/pipeline/sentence_layer/sentence_parsing/: facade.py  models.py  parsers.py
wta/pipeline/sentence_parsing/: facade.py  models.py  parsers.py
wta/pipeline/statistics/: statistics.py  statistics_factory.py
wta/pipeline/text_history/: action.py  action_factory.py  event_factory.py  idfx_parser.py  names.py  tpsf.py  tpsf_factory.py  transforming_sequence.py  ts.py  ts_factory.py
wta/pipeline/text_history/events/: base.py  insert.py  keyboard.py  replacement.py
wta/pipeline/transformation_histories/: transformation.py  transformation_factory.py
wta/pipeline/transformation_layer/: action.py  action_factory.py  event_factory.py  sentence_segment.py  spsf.py  text_transformation.py  text_transformation_classifier.py  text_transformation_segment.py  text_unit.py  text_unit_factory.py  tpsf.py  tpsf_factory.py  ts.py  ts_burst.py  ts_factory.py  tsbuilder_factory.py
wta/pipeline/transformation_layer/events/: keyboard.py  replacement.py
wta/sentence_histories/: sentence.py  sentence_tokenizer.py
wta/sentence_parsing/: facade.py  parsers.py
wta/statistics/: statistics.py  statistics_factory.py
wta/tests_and_evaluation/: texthis_correctness.py
wta/tests_and_evaluation/evaluation/: sen_labels_correctness.py  sen_ts_correctness.py  textunit_correctness.py
wta/text_history/: idfx_parser.py  tpsf.py  transforming_sequence.py
wta/utils/: nlp.py  other.py
(+52 files in other folders)
