[tool.poetry]
name = "thetool"
version = "0.1.0"
description = ""
authors = ["mulasik <mulasik@gmail.com>"]
readme = "README.md"
packages = [{include = "wta"}]

[tool.poetry.scripts]
wta = "wta.__main__:run"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
nltk = "^3.8"
matplotlib = "^3.6.2"
numpy = "^1.24.0"
supar = "^1.1.4"
spacy = "~3.0.6"
de-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.0.0/de_core_news_md-3.0.0.tar.gz#egg=de_core_news_md"}
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz#egg=en_core_web_md"}
el-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/el_core_news_md-3.0.0/el_core_news_md-3.0.0.tar.gz#egg=el_core_news_md"}
language-tool-python = "2.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
