[tool.poetry]
name = "thetool"
version = "0.1.0"
description = ""
authors = ["mulasik <mulasik@gmail.com>"]
readme = "README.md"
packages = [{include = "wta"}]

[tool.poetry.scripts]
wta = "wta.__main__:run"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
nltk = "^3.8"
matplotlib = "^3.6.2"
numpy = "^1.24.0"
supar = "^1.1.4"
spacy = "~3.5.0"
de-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.5.0/de_core_news_md-3.5.0.tar.gz#egg=de_core_news_md"}
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0.tar.gz#egg=en_core_web_md"}
el-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/el_core_news_md-3.5.0/el_core_news_md-3.5.0.tar.gz#egg=el_core_news_md"}
language-tool-python = "2.5.4"
lxml = "^4.9.2"
typing-extensions = "^4.5.0"

[tool.poetry.group.type-checking.dependencies]
mypy = "^1.0.0"
types-tqdm = "^4.64.7.12"
types-beautifulsoup4 = "^4.11.6.5"

[tool.poetry.group.linter.dependencies]
ruff = "^0.0.249"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
sqlite_cache = true
show_error_codes = true
show_absolute_path = true
show_column_numbers = true

strict_optional = true
warn_no_return = true
# disable, because matplotlib is not typed
disallow_any_unimported = false

# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

# Disallow any
disallow_any_explicit = true
disallow_any_decorated = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
# because rewriting all stubs would be too laborious
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["ALL"]
ignore = [
    # handled by black:
    "COM812",
    "E501",
    # don't require self and cls to have types
    "ANN101",
    "ANN102",
    # allow relative imports from parents
    "TID252",
    # don't separate typing imports
    "TCH",
    # ignore documentations
    "D",
    # disabled for now:
    "A001", # shadowing builtin
    "B905", # zip without strict
    "C901", # too complex
    "E722", # bare except
    "E741", # ambiguous variable name
    "ERA001", # commented out code
    "FBT00", # boolean positional argument
    "PLR0911", # too many returns
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used
    "T201", # print used
]

[tool.ruff.per-file-ignores]
"stubs/**/*.pyi" = [
    # ignore unused arguments
    "ARG001",
    # ignore missing __init__.py
    "INP001",
    # ignore bool params, because the library chose it this way
    "FBT001",
    # ignore invalid names
    "A002",
    "N815",
    "N816",
]
