[tool.poetry]
name = "thetool"
version = "0.1.0"
description = ""
authors = ["mulasik <mulasik@gmail.com>"]
readme = "README.md"
packages = [{include = "wta"}]

[tool.poetry.scripts]
wta = "wta.__main__:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
nltk = "^3.8"
matplotlib = "^3.6.2"
numpy = "1.26.4"
supar = "^1.1.4"
spacy = "3.7.5"
lxml = "^4.9.2"
typing-extensions = ">=4.10.0"
pandas = "^2.0.0"
language-tool-python = "^2.7.1"
more-itertools = "^10.8.0"
benepar = "^0.2.0"
huggingface-hub = "0.23.4"
diaparser = "^1.1.3"
torch = "2.2.2"
tokenizers = "<0.21"
transformers = "4.36.2"
spacy-transformers = "1.3.5"

[tool.poetry.group.type-checking.dependencies]
mypy = "^1.0.0"
types-tqdm = "^4.64.7.12"
types-beautifulsoup4 = "^4.11.6.5"

[tool.poetry.group.linter.dependencies]
ruff = "^0.0.249"
black = "^23.1.0"
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
sqlite_cache = true
show_error_codes = true
show_absolute_path = true
show_column_numbers = true

strict_optional = true
warn_no_return = true
# disable, because matplotlib is not typed
disallow_any_unimported = false

# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

# Disallow any
disallow_any_explicit = true
disallow_any_decorated = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
# because rewriting all stubs would be too laborious
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["ALL"]
ignore = [
    # handled by black:
    "COM812",
    "E501",
    # don't require self and cls to have types
    "ANN101",
    "ANN102",
    # allow relative imports from parents
    "TID252",
    # don't separate typing imports
    "TCH",
    # ignore documentations
    "D",
    # disabled for now:
    "B905", # zip without strict
    "C901", # too complex
    "E722", # bare except
    "ERA001", # commented out code
    "FBT00", # boolean positional argument
    "PLR0911", # too many returns
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used
    "T201", # print used
]

[tool.ruff.per-file-ignores]
"stubs/**/*.pyi" = [
    # ignore unused arguments
    "ARG001",
    # ignore missing __init__.py
    "INP001",
    # ignore bool params, because the library chose it this way
    "FBT001",
    # ignore invalid names
    "A002",
    "N815",
    "N816",
]
